--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
   /* 
         FIRST WE'LL DEFINE OUR SWATCHES, i.e. THE COMPLEMENTARY
@@ -25,7 +24,7 @@ body {
 
 #root {
   background-color: var(--swatch-primary);
-  font-family: /*"Montserrat", sans-*/serif;
+  font-family: serif;
   position: absolute;
   width: 80%;
   left: 10%;
@@ -119,15 +118,9 @@ body {
   border: 2px solid #333;
 }
 #song-cards .song-card-dragged-to {
-  background-color: var(--swatch-accent);
-  color: white;
-  border: 3px solid var(--swatch-contrast);
-  transform: scale(1.02);
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    font-size: 24pt;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 125px;
+  background-color: var(--swatch-complement);
+  color: var(--swatch-contrast);
+  border: 2px solid #333;
 }
 #song-cards .song-card:hover {
   background-color: var(--swatch-contrast);
@@ -265,7 +258,6 @@ input {
   visibility: hidden;
   opacity: 0;
   transition: all 0.35s ease-in;
-
 }
 
 .modal.is-visible {
@@ -275,7 +267,7 @@ input {
 
 .modal-root {
   position: relative;
-  max-width: 60vw; /*1200 */
+  max-width: 60vw;
   max-height: 30vh;
   overflow: visible;
   display: flex;
