--- a/src/App.css
+++ b/src/App.css
@@ -106,8 +106,12 @@ body {
   background-color: #FFA07A;
   color: black;
   text-align: center;
-  font-size: 38pt;
+  font-size: 24pt;
   padding-top: 4px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #add-playlist-button {
@@ -158,6 +162,10 @@ body {
   min-height: 50px;
 }
 
+.playlist-card[type="text"] {
+  font-size: 12pt;
+}
+
 .song-card, .selected-song-card, .unselected-song-card, .is-dragged-to, .is-dragging {
   font-size: 12pt;
   margin: 10px;
@@ -178,10 +186,10 @@ body {
   height: 20%;
 }
 
-.unselected-playlist-card:hover {
+.unselected-playlist-card:hover, .selected-song-card:hover {
   cursor: pointer;
   background-color: var(--swatch-contrast);
-  color:white;
+  color:var(--swatch-accent);
 }
 
 .selected-playlist-card,
@@ -204,19 +212,21 @@ body {
 
 .card-button, .card-button-disabled {
   font-size: 18pt;
-  border-width: 0px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #333;
   color: black;
   cursor: pointer;
   flex-shrink: 0;
   background: white;
-  border: none;
   padding: 2px 4px;
   border-radius: 3px;
 }
 
 .card-button:hover {
   cursor: pointer;
-  color:black;
+  color: black;
+  background-color: #e0e0e0;
 }
 
 .card-button-disabled {
@@ -312,8 +322,8 @@ input {
 
 .modal-root {
   position: relative;
-  max-width: 60vw;
-  max-height: 600vh;
+  max-width:40vw;
+  max-height: 80vh;
   overflow: visible;
   display: flex;
   flex-direction: column;
@@ -330,7 +340,7 @@ input {
 }
 
 .modal-north {
-  font-size:32pt;
+  font-size:24pt;
   font-weight: bold;
   background-color: #669966;
   color:white;
@@ -341,7 +351,7 @@ input {
   grid-template-columns: 30% 65%;
   grid-template-rows: 20% 20% 20% 20% 20%;
   gap: 10px 20px;
-  font-size: 48pt;
+  font-size: 12pt;
 }
 
 span {
@@ -360,15 +370,16 @@ span {
 .modal-center-content {
   grid-column: 1 / 3;
   grid-row: 1 / 4;
+  font-size: 18pt;
 }
 
 .modal-prompt {  
-  font-size:28pt;
+  font-size:18pt;
   font-weight: bold;
 }
 
 .modal-textfield {
-  font-size:28pt;
+  font-size:18pt;
 }
 
 .modal-button {
